// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#@@iterator() 1`] = `1`;

exports[`#@@iterator() 2`] = `2`;

exports[`#@@iterator() 3`] = `3`;

exports[`#@@iterator() 4`] = `4`;

exports[`#@@iterator() 5`] = `5`;

exports[`#@@iterator() 6`] = `6`;

exports[`#next() 1`] = `
Object {
  "done": false,
  "value": 1,
}
`;

exports[`#next() 2`] = `
Object {
  "done": false,
  "value": 2,
}
`;

exports[`#next() 3`] = `
Object {
  "done": false,
  "value": 3,
}
`;

exports[`#next() 4`] = `
Object {
  "done": false,
  "value": 4,
}
`;

exports[`#next() 5`] = `
Object {
  "done": false,
  "value": 5,
}
`;

exports[`#next() 6`] = `
Object {
  "done": false,
  "value": 6,
}
`;

exports[`#next() 7`] = `
Object {
  "done": true,
  "value": undefined,
}
`;
